# thiel

./: .gitignore  README.md  pyproject.toml  thiel.py
thiel/: __init__.py  __main__.py  patterns.py
thiel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
